“改正了document用引号包裹的错误”

--- a/HTML/第八章-jquery/11-属性过滤器.html
+++ b/HTML/第八章-jquery/11-属性过滤器.html
@@ -15,7 +15,7 @@
 
     </body>
     <script>
-        $("documnent").ready(function(){
+        $(documnent).ready(function(){
             $("a[title]").css({
                 'color':'#FF9600',
                 'font-size':'12px',
