--- a/HTML/第八章-jquery/12-子元素过滤器.html
+++ b/HTML/第八章-jquery/12-子元素过滤器.html
@@ -16,7 +16,7 @@
 
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             // 通过相关指数获取子元素，但是even具体什么意思我还没弄懂，有奇数规则和偶数规则等等，这里你是奇数索引被改变样式
             $("ul li:nth-child(even)").css("background","#FF9600");
         });
