--- a/HTML/第八章-jquery/5-类选择器.html
+++ b/HTML/第八章-jquery/5-类选择器.html
@@ -25,7 +25,7 @@
 
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("button").click(function(){
                 $(".myClass").each(function(index,element){//获取到的是一组，所以用each、遍历
 
