--- a/HTML/第八章-jquery/6-后代选择器.html
+++ b/HTML/第八章-jquery/6-后代选择器.html
@@ -31,7 +31,7 @@
 
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("button").click(function(){
                 $("#box li").addClass("myClass");//为li标签添加类名
             })
