--- a/HTML/第八章-jquery/7-父子选择器.html
+++ b/HTML/第八章-jquery/7-父子选择器.html
@@ -18,7 +18,7 @@
         </div>
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("button").click(function(){
                 $("#myUl>li").css({
                     "list-style":"none",
