--- a/HTML/第八章-jquery/8-前后选择器.html
+++ b/HTML/第八章-jquery/8-前后选择器.html
@@ -31,7 +31,7 @@
 
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("button").click(function(){
 
                 if($("#username").val()==""){//这个可能是value吧
