--- a/HTML/第八章-jquery/10-可见性过滤器.html
+++ b/HTML/第八章-jquery/10-可见性过滤器.html
@@ -21,7 +21,7 @@
 
     </body>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("#button1").click(function(){
                 $("div:visible").css('backgroundColor','red');
             });
