--- a/HTML/第八章-jquery/4-基本选择器.html
+++ b/HTML/第八章-jquery/4-基本选择器.html
@@ -27,7 +27,7 @@
     </body>
     <script src="jquery-3.7.1.js"></script>
     <script>
-        $("document").ready(function(){
+        $(document).ready(function(){
             $("#myId").click(function(){
                 $("#myId").html("覆盖之前的标签里面的内容");//不是追加。而是覆盖内容
             })
