提交第八章内容

--- a/HTML/第八章-jquery/19-bind方法阻止默认行为.html
+++ b/HTML/第八章-jquery/19-bind方法阻止默认行为.html
@@ -11,8 +11,8 @@
     </body>
     <script>
         $("document").ready(function(){
-            $("document").bind("contextmenu",function(){
-                return (false);
+            $(document).bind("contextmenu",function(){
+               return false;
             })
         })
 
