--- a/HTML/第十二章-Bootstrap插件/1-模态框.html
+++ b/HTML/第十二章-Bootstrap插件/1-模态框.html
@@ -24,7 +24,8 @@
                         <!-- 模态框标题 -->
                         <div class="btn-info modal-header">
                             <!-- 关闭按钮 -->
-                            <button type="button" class="close" data-dismissable="modal">&times;</button>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span></button>
                             <h6>欢迎进入模态框！！！</h6>
                         </div>
                         <!-- 模态框主体部分 -->
